--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/unleashed_wallet.loader.js";
       var config = {
-        dataUrl: buildUrl + "/unleashed_wallet.data.gz",
-        frameworkUrl: buildUrl + "/unleashed_wallet.framework.js.gz",
-        codeUrl: buildUrl + "/unleashed_wallet.wasm.gz",
+        dataUrl: buildUrl + "/unleashed_wallet.data",
+        frameworkUrl: buildUrl + "/unleashed_wallet.framework.js",
+        codeUrl: buildUrl + "/unleashed_wallet.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Savages Games",
         productName: "Unleashed",
